--- a/Driver.resx
+++ b/Driver.resx
@@ -1961,6 +1961,125 @@
   <metadata name="SystemTrayMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>295, 17</value>
   </metadata>
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAOAAAABACAYAAAADMXsPAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wQAADsEBuJFr7QAAGnVJREFUeF7tnXd8XNWVxwm2bNUpaiNpmjQzGkkjaVRHGvVmSdhylXvvlrHBtICx
+        MRgDMjbg4AAxoYSw1GUhkF3YLIQQILSEzYZkk83WZNmWbdmWbG9nP+eN3nvnnfvKqKD1fvb98fv44+v7
+        ju6M9Z177/mde+eSSy65BGzZsvW/JqHBli1b8yehwZYtW/MnocGWLVvzJ6HBli1b8yehwZYtW/MnocGW
+        LVvzJ6HBli1b8yehwZYtW/MnocGWLVvzJ6HBli1b8yehwZat/7e66+B2gLdfMNQ3H7xTeGaWEhostTBj
+        MeS5SsHjjYEv1AqBSBIClR0QjHZCSTAORWXVkOMoEp6zZeti10UPoMPtBW9FswSeL5QAf7gN/JF2DYTB
+        qi4or+qW2m0Qbf1f0kUNoLsoCGXBRigrb0obwvLqHshzlwqxbNm6GHXRApjnKoHSQBxKgw0zgnBxVp4Q
+        05ati00XJYCXXroAPL4YlPjrZwxhabBRiGvL1sWmixLArBw3eHy1UOKvmxWECzMyhdhUmdlOKCyNQqAy
+        CZH4CFQ1LYPqpjGobl4OlfFhKV5haSUsWLhIeFYWztQNXZuhoWsLNHZvhcaebdDUux2aendAc99OqGoe
+        U/oWeashllgJiaH94K9MCrFkZWU5IFyZhERiNQz27YLRgX2wbGAPLO/fDSMdG6Gzfhiq/PWwaOFi4Vkz
+        ZS5cBG0llbA+0gGHa4fhWMNyuCm+DG6JL4XjtcNwIJyEUU8UChZlCc9SPRTphkfCXfCFUCd8saIDnihP
+        wlPl7fBMsA1+MZBQ+nVnueGCpxpeKWuAr5TG4cWyOEwWR6AlyyHE5HIszIDt3gp4JJ6E93uWwgf9Y/DN
+        wRVwX1MHtBcUS32O1NTDb6zcAN9ZvQk+WrsZvrt+K3xv03b4zS074fvbd8MzYyuUeF0+P/zu5Yfg9w4f
+        ht+/8kr4g6uvgh9dew38+Prr4A+PXg9f3rld6bs90QIvT+yFPzt9Ek4sGxHGhnLnZMPu3k740tUH4cPJ
+        4/APj98PP3vic/Dzpx+Ef3z2IXhr8jg8ee0ELGmsFZ6lShfAjYNd8No9Nwv/dmzbOOQ7coW4JhIaBLkK
+        AlLGc7YQOgt8QmzUpQsypBiR+mGojI9AZXwUog2XQbRxqQbCmpYVUNOyEqqbx8Dj138jEcB45yZDCKua
+        xqQsLsZrHdgDrYN7ITG0Txovj4UfCLGWFdA9cjn0Dh+EgSUTMDR0AIYH92sgXNm3C1b37oRVnVsgXt4s
+        xOFavHARdPrq4EjLGri6ZTVc27wKrm9aCUcbV2ggvLX+MritbhTuqB2Bzb44ZC/IEGKhLlT2mEKIfUZy
+        i+BLvmZ4ydsEv+JtVCD8NW8jvBpohqsKgkJcWY4FGfBUXRLeaVsC7yZH4L2uUQ2E31qyCsb9FXCkug6+
+        vXydIYRPL12uxOzy+uB3DhycgvAKAcKXtm8DV1YmfHn3DvjjW47Dn5w6AX96+y1wYumwML6Tq5bBx+fu
+        gJ9euAf+9qHPwN89ch7+/rHPChD+0y89Av/8wqPw3fsnobWyQoiDOjthDeBzt14rtFP9/NWnIFEdEWIb
+        SGgQVOiJQHFZjS6EuDRdOPXJ7yoMmEJYVFYlxEb4yqu6IFw3CJG6obQhjLWugnD9kDAb5jpLIN6x0RDC
+        aNMyCEQ7oLl/F7T071Yg9EdSv6iychzF0Dq0H5Kjh6Fz5FDaEK7t2QHJ6l7hdcpC+DbGR+HyxFo43Do+
+        LQivDXfqQvhAZa8phOFFOdJM+Ly/xRTCvhy3EBt1obIJ3mrqh2+0DppCeLohAb++dNwQwqdH1dVHp9cL
+        P9x3wBDCF7dtgdOjI/DxsRvgj07cqEB40+gSzdge3r4J/vLeO+Gv7jsDf/3AXWlD+C8vPQb7LxsQXuvZ
+        A1vhv998XoBqukII05wJhQZBRaVVUFxWrQuhw6VmOHGvaDYTlgTqhdj+cAJCsX4I1w7MCMKKWJ8mXq7T
+        A/XJDYYQ1iXXKctRCqGPAIgzZMvgXmgfvhzaRw7NCEKjmXBF3RDsb18PE23rZgThoQrtBwXqvmifKYRX
+        FkWU5agZhM94xf+f1lwXfL2uB95s6E0Lwg9HVxtC+NTwUiVuZ5kXfmv3PkMIP5g4oCxHKYQ3jQwpMXa0
+        J+DP77od/uLc5Iwh5DPhmf1b4L/eeG5OIMTlLH8/dSQ0CCosiRpCiEs+2tdsOeqtaNH0RTO/oqYXQjV9
+        s4LQXay+iQggQmYGId0TyhD6wupeKVw3BG1LJqBt+OCMIcTlKN8TRj0R2JXcBHuSG2YFYWVugSbu+aoB
+        UwgfDiQ0e0IzCPuytbPgzd4ovBHrUiB8eyYQrklB+OTQqBIXAfzBzj2mENI9oQzh8SWDSoyPjl0HPzlz
+        alYQfuPsCc3rPbNvM/zn68/OCYQ4C9LYBhIaBBV6Kg0hxL/TvlZ7QtoXgUSLYrYQIjByTAnA9rXThtAX
+        bpWex9kP94SYmJkthKHSqOb1rmxaDjs6Ns8awo2+uCbuuepBSwjpnvA5Ewj3Oss0sR8LxuFr1R2mEGJi
+        5o3OEUsInxhQEyidpWVSYma6EB4fSi0bG7xl0p4QEzOzhbAlon6A37lnM/zHq0/PGYRp7AWFBkEFnogp
+        hHQWRL9PlQMyJTmlhAZK7nfpgoUan5BDiEtLZ74XsnMLpL2mFYRy3FxnMdS2jVtCWN2yEryhZnAXlYPD
+        Xab4lJgZlRMzRhCW+GvBVeCH1s5NphBidlQZV2YebO7aCts6txhC2B9sgoCjGJaFEqYQnohp90F31wyZ
+        QniTtx5yLl0o9T3qqTaF8I587ZLsq+EEvF7ZbghhmzM1G9fkOi0hfKJffT86SsqU7KgM4W/rQPjajh1w
+        Y28PLK+ugp6Kcgi6XdLz21qalcSMHoTv3XQdDNRE4erRQUsIrx9fpozrzt2b4N+/8pQphJiEGUk0wMFV
+        IwJwXNiHvp86EhoEOd1eSwizc/OF58yUme0SzHoKIU3YLFiQYTkTyiVvKQDXGEJYn1wPizKNN8c4E9Ls
+        KIewItav9C0siZjOhIOJNUpfj6sMNnZvM4QQEzPKe7NwkeVMmEWSMWdrlphCmMgtVPrWZTlNZ8JzhZWa
+        9+O18hZTCGnf26saTJejv9CjrlQ6PKUai4JD+NG+/RBwqh/YXDgT0uwoh3BVk7pKeP7KA6YQTm5bp/Q9
+        vWsj/NvLT5hCSJMrmBXl0FGlsQ8UGgRlZbugoDg8pxCitcF9Qgohzkq0v9VyVAHQUQyxxGoRwo4UhBiH
+        j0Xzc+Ijmuwoh7CgRLuksFqOyv3QJ1zfvV0fwvYN0MP2xxuq+00hDBOo7owNm0JYvlj9hanLcpkuR+8p
+        UpfNzYvzpOyoGYR0zIcCUdM94ePd6v6tw1Mi+IQUwudWj2ticx0b7NdkRzmE/VXqB8nJ1WPwNybL0Tu2
+        rFX6nt65Af71lx83hPAnLz6iGcdDn54QoJtzAD/1qUvBXViuQlhiDCEHx0gSgDpmvQwhmv+0v9WeUAYQ
+        /8TEjBGEkXrt8o0LfUJuUVAInQV+TX+rPaHcrzbUImVHjSBMBBo0cdfX9JvuCcN5KoCYmDGDkMatzXKZ
+        7gnPMgBli8IIQhr7kL/SNDHzxQ51xuwoLhF8QgrhcytXa2JzHevvg4+Pay0KCmFfVP2gRJ8Q94RGEN6x
+        WYV9cvs6KTtqBOEHF05rxmFl3M8JgKjsnHzILwqlBSHuj/jzXBiD+4QUQg6gVWImJ08FUM6O6kGI3iEf
+        CxX6hNyioBDyYgKrxIzcLxZqVSwKPQhbA9pSvfHYAFxhmJgZgxABUM6OGkFI49Zmu0wTM2eK1aV/0+K8
+        VHbUZwwhjX25L2KaHX0sqY4lWVSiZEf1IHx2ubqv11PA5ZL2hKjeUAX0hlEh6IuEoa8yDK5stXrolhVL
+        lcSMFsL7JAhv36RuFXA5KlsUehC+/8CkZhzzBiDK4SqbMwiLvTHBJ6QQCgBaZEdzpn4hUwCqFgWHEGPw
+        sVBFm5YKFgWF0JmvBdAqOyr3qwm3anxCDmELq5VdExuUEjNGEFZMfeCgqEWhByGNG8t2mWZHT3vUrDYC
+        qFgUBhDS2Ae9YVOL4rGEOhsnizwai4JD+MyYOYDT0S3LL9NkRzmEt21UZ1tcjlKfkEP4/v23a2LPK4C4
+        FMVfwLmAsNhbI1gUFMKsnFS2S5aVRZEtA5hXJPiEFEKMwcdCFW28TLAoKISYmaX9rSwKuV91OCGY9RTC
+        5mCTJu6q2iElO6oHIQWQ+4QcQhq3JtttalFMlsSUvo2L87Q+oQJhqwIhjT1RGhIsCgrhF1q7lb7JQo/g
+        ExqVrc1GjT4v/OoVE4JFQSG8bcMqpT8uR7lZTyF87/wpTfx5BRA1VxDiqXk9n1CGkAOYXxyCfA/+vLCU
+        CCkoqZSExduojEXZUj+cCblFQSFEkPlYqKINo7o+oQyhgwHILQoOoRI33Cb4hBTCxnItgCtqtRUzHMJy
+        AiD3CTmENC4CyH3CxwmEtxEAGzIdgk/IIaSxJ0oqdH1CGcJHm9UlKxZwc5/QqGxtumooK4UzK5bBd264
+        VsiO6kF4ap062+JylPuEFMJ379UCaFU7OucAoqYLoV5iBqFBI94IQsy88mfSEc6E3KKgEFoBiDOqkVnP
+        l6PcotCDUIkbaRd8Qg4hT8xgdtQIwqAjdQIBhXtCMwjp66vOdgs+IYXwVKla5I4Acp+QQ0hjH/CUCz4h
+        hfCRRnXJigByn5BCSMvW0pErMxMOJZPw4ZFDhokZIwhPrVVPaeBy9GdPima9DOE795zU/Fyr2tFPBEDU
+        dCFczLw37JeqmNGHEH1C/jPTEQLILQqz2lEuXNaaVcxMF0I5biTSLlgUs4GQAignZowgpK+vOidf8Akp
+        hCdL65S+8Uyn4BNyCGnsA8VBwSfkFTNy3/b8IvjWsGjW65WtWeloTzd8/8or1IoZk+yoHoS3rlGXu7gc
+        lbKjBhC+c/fNmp9tVTv6iQGImg6E+Hf6LPZTy9ZECGnVzHSUnVcgWBQUQrQ4+DNUuLe0KlubDoRyXDxP
+        yC2K2UCIFTNybJod1YOQvr6qnHzBJ6QQ3lymFmTHs5yCT8ghpLH3FwYEn5BC+HCdumdEAKXsqAGEtGzN
+        TK9u2apftjYF4YV1a+DC+nFTCNEnlOPhclTOjupBON3a0U8UQNR0IKRQYRWJ9jyhFsLZAMgtCgohWhz8
+        GSr0CXnZ2mwglOOGKpOCRTEdCPcyCAMOjxKbWxQcQvr6ojn5gk/Iy9bkvvVZTsEn5BDS2PsL/IJPSCF8
+        KKbuGdvchapFoQMhLVsz0m09vaa1o8tjqYwuFnCbzYToE8oxcTlKLQoO4dt3HteMwap29BMHEJUuhO7C
+        gPIMJlPEQ70qhDMGMBcBFH1CGcLyajUTpyf0CfVqR2UI83T2s+moPNohWBQUQvQJ+TPpilsUHELaN5pT
+        IPiEFMLjXhUqq7I1hJDG3uf2CT4hhfDzNeprbHMVaH1CBiEtW9OTP88h1o4eUSG8sU9d6ViVraFPKPfF
+        5Sj3CSmEeLKejsOqdnROAET/z0iy/5aqlgmaQkiXoQig/sn6FIRYwE3H4CoMSreyYfG0pOKKVGZ0Kjua
+        MXVtAwLILQoKYbDKAsC6IaVsTQ/CmQIYjHYIFgWFEH1C/ky64hYFh5D2xaNM3CekEN7oU6GyKltDCGns
+        fS6vxqLgED4YVfeMWMTNfUIKIS1b09PJji79Au4pCNGol/tala2hT6jEFcrWtBC+efuNmnFY1Y7OCYD5
+        RRWGQgjlfniiINVuDKESszhkcr1Fi3SKgo6B+4S8djRrqg4V61EjdUsMIQxGtdUbXOgT1iXXG0I40ysW
+        A9FOwaKgEKJPyJ9JV9yi4BDSvpHcAsEnpBDe4FehwrI1alGkIGzVQEhj41Em7hNSCPFkvdwXAeQ+IYWQ
+        lq3pCX3CH+zcawgh7WtVtnbzmLpM1y9bUyF889QNmthWtaPzCiAqNQsaQ5gxdTET9uHXW1AI8SgTjct9
+        Qg6hXDmDAKbMen0I8Vn++qjQpkiVrelDiIeIaX+rPaHcD6/B4BYFhRB9Qhq3r2nMdE/odapHwLhFwSGk
+        cRFA7hNSCD/tVyGRy9bMIKSx9zhKBZ+QQvi5sAp3wpEv+IQUQlq2pie1bE0fQtoXl6Nm2VF60VOqbO2s
+        IYRfv/V6TWyr2lH0CfnYmYQGQRw6MwBT5Wryv4sQLlqcI/XD4m5+vQWFkN8jyn1CDqEMIM6EasWMCCGC
+        wF8fFQKo1o6KEHIArRIzcj8cs8aiGNZCiD4hjdvTNGaamCkjAHKLgkNI4+IpCu4TUgivC6gA4ikK7hNy
+        CHOnzhmijrqDgk9IIXygQt1fJvLyBZ9QU7bWZp6t1taOihDSvniekGdHjS56UsvWpiB8UAvhGzdfp4lt
+        VTuKPiEfO5PQIIhDZwYgHgfS9tFCmLE4VbGCMyW/3oJCyAHEfzODUAEwx83K1rQQ4pWH/PVRoU+oLeDW
+        Qsiv4LDKjsr98NpDblFQCNEnpHG7m5ebZkfLyDi4RcEhpHHxFAX3CSmE1wS1x6K4T8ghnHCnblNLp2zt
+        /qCaYW3Ncws+oVHZmp547SiHkPZFn1DPotC76AmXo6pFIUL4tRNaAK1qR9En5GNnEhoEcejMAEydmuD9
+        VAjlfnlOj2DWUwg5gOnWjkoACtdbqBD62bUYXAg/L+CmEHIArSwKuR8mirhFQSFEn5DG7WxZYWpRlJKZ
+        mFsUHEIaF09RcJ+QQnhVUJsMOlPebgkhT8wYQXg/uUqyNdct+ITvduiXrenpo7VbTCGkfY92dwkWBYWQ
+        XvSEy1GtT6iF8PXj12hiW9WOok/Ix84kNAgSgVLFTwdol6AihHI/LJrmPiGFELOZNC7+Gzfr9WpHEUB+
+        vQWFEJ/jr4+q2BcTCrgphJi9pf3NfEJ8Tu6H75OeTyhDWBPX+l7JlpWmPuEich3jruRGUwhpXCzi5j4h
+        hfDKcm0yaE9pDTwYEStmZgLhfV61zpTetqYHIS1b01OqYsYYQtr3hs5OjUXBIaQXPeFylPuEHEIa26p2
+        FH1CPnYmoUGQMVQpybMVWgFqEkaUM18tzJZuwdYx62UI8cCu3BevO+Q+IYdQvmYCQeTXW1AIfSzZwYVW
+        R02reIpChtBL/Dr8mdwnpBCi7yj3xaRSYuiAIYQtndr/qN7uraZmPe2bSswYQ0j7IoDcJ6QQHmYAyrWj
+        cwHhZ0trlLitOS4lO/qWDoS0bE1PatmaPoR476jc9/zIiOATUgjli55QuBzlPiGHsKJInRxe+vRhwayn
+        EKJPyMfOJDQIEvd1MxPGkWPiPS/couAQYkZzcWaeZFlwn5BDKMeVANS5Y0aGkF4/qCfco0plawYQxhJr
+        pFPxuBTF+2G4T0gh9DJvr7F7iymEvopmcBf4LcvWBhq11oKaHdWHkPbFUxTcJ6QQ6t07iomZdCCcLKkx
+        hfB8ieoDt2Q7NRYFh/DhevOVyqvDy00hfHn1WujyemFTTUywKDiE6BPKcXE5yn1CDuELRw7AQKwKxhNN
+        gk/IIVzfbf460gIQM5ccppmI7+twlrOCkGdH9SDEo01yTDxFwS0KCiGHQk+4VDWDkCdmjCCUzyjKCtUN
+        TmVHjSHk2VE9CKN+7QW6WzQWhQgh7YtF3NwnpBAeDIm/MHgb9x2hDlMI8fLfLW6/6Ux4vli97gIB5D4h
+        hZCWrekJfUJtAbcIIc6EP9SxKDiE6BPKca3K1vhylPuEHMJQiTrpGEho0BXCwoGajnBpymOi2c59wplA
+        SMvWrG5b84a0WT49YcJHKeCeIYR4/QWPi2cJVYti5hDmsA8y3BOaQUj7IoDcJ6QQ4hfC8HGjEMLdpTE4
+        F+7SQHihvB025qf+bze7A6bL0XsL1SQcfiEM9wkphLRsTU+7QlGhgNsQwj3mEE6nbE2G8KdpQPijh+4R
+        xq0joUFXs50Fjc73IdizgbDAE9LEQxi5RUEhxAuD+Ri4cHmM+8XZQGhUMYMHfmcDoV7FjJyYMYKQ9sVT
+        FNwnpBDuMwCQqjAjSzrYW8S+7QqPMpntCdEnlPu2ZDoEn5BCSMvW9OTLyhEKuI0gPNc3aAoh+oRyXP2y
+        tVsVCL938sa0Idy3xNzLnJLQYKiZ7gXp3o9LuXFtBhBiTSiPJwGo4xPKEHrZyXMjYRyEZSYQmiV68OZt
+        fG4mEHYmtTDJotlRPQhpXzxFwX1CCuHeiJh99GU5YKw4ovvFMLLSKVvbRW7dbs6UrzzUh/BBUrZmpMl4
+        qyWEb6zZAJeVV5jOhOgTyjGNy9ZSEOL1FuoXwhhD+O2ztwjjNZDQYCqcycwynVxysbaZEEL0BdOFEP/E
+        C3h5HBSCwy0KCiHOnPwZI2EsnDXThbCuba1wb6ieEMLpzoRVJucYuUXBIaR9/U6P4BNSCHdFxFI9TMzI
+        PuGEvxGWFASl7CjOgqi1BeXCnlAPQjTr5ZjSlYc6Zr1e2ZqRHBkZ8FznEHw4ukYXwvfXbITa/AJyDb4+
+        hOgTyjHNy9ZuhVcO75duXHv36NWGEH44eZP0fYV8vAYSGiyFwGBCBWe21DEkLXTyKQn86jH+rJlw6Yc+
+        Ht4jg5lPCmFRSVQCHzOjaEvwZ2XhKQpuUVAIZ/JNvXilBi5d8SgThzAST3mLaLTzr0qzUo6jEILVXdKX
+        hKJvSCFs7tsl/SzMjPLCdC5MzKwxgZD29Tk9gk9IIdxZqTXA65wlgln/GVbAbZSYoRA+6dN+8IlXHhqX
+        rVlp3FcOjyX7FQjfWTYOZ9s6wZeTsqa01+CLEKJPKMeyKlt75fKUx4gQ3r1+Nfz4zCkFwq/ecET6klA+
+        PgsJDbZsKbquZkAw62cC4VaX/pez2hIbbNmSNFRaLfiEIoT9lhA+GmjVFG3b0khosGVLUmm2C66vG50V
+        hJ8PtkGIfDeFLUFCgy1bivBbmMYDTTOCcMJTpXwtmi1DCQ22bAlyL8qG7uIwbK9olcz6SR0Ij1W0wSFf
+        HEby/YJHaMtQQoMtW7bmT0KDLVu25k9Cgy1btuZPQoMtW7bmT0KDLVu25k9Cgy1btuZPQoMtW7bmT0KD
+        LVu25kn/A954oaxOW780AAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIAAdKAAAZgAAAICAAAABACAAKAgBAIMoAABAQAAAAQAgAChCAACrMAEAMDAAAAEA
