created buttons and logic so there is a GUI option

--- a/SettingsForm.resx
+++ b/SettingsForm.resx
@@ -118,6 +118,140 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAOQAAABaCAYAAACol/qIAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wQAADsEBuJFr7QAAHg1JREFUeF7tnXl0W8d1hx0tpLiCBEkQIAgQBECQ4E6C4CYuIilqpSiJ2mxZu2SJ
+        lmV5UWRL8iLLS+XIdm3Llp24TrwmtlPXdbZmj2MndtI0a500adK9aZukS9qme9renAvlyQ/3zgzmAaBI
+        J++P7xxpDu97IMVP897Mb2YuueSSS8DGxmbOwBpsbGxmD9ZgY2Mze7AGGxub2YM12NjYzB6swcbGZvZg
+        DTY2NrMHa7CxsZk9WIONjc3swRpsbGxmD9ZgY2Mze7AGmznOruIq+GhVG/yepxU+7m2HT/g74JOBGHwq
+        GIdPh7vhM5Fe+Gy0Hz7XtBgeCbWzeps5DWuwmePsdHjhw1XtWlKeC7ayeps5DWtIi4KiCihzh8FV3fhL
+        mqCyugkKHS7IKyhlX2+TPjscXnjZ26El5cOBFlZvM6dhDdo4ynxQHeyCSPtKqO9YBfUdq6GhcwIaYmsg
+        GpuEaNdaaOxaB43x9RCNrYHqcDcUOirZdeYyXf522NO7Bfb1bIb93ZtgOr4RDsY3wKGuKTgcWw/Xdq6D
+        I51r4WjHJNQWVbB6yruiS+Ge6Bjc1zAK99ePwIORJfBQZBjO1Q3Bo+FBeE9oAB4PLYabvXKRtpdUw0vV
+        nVpSPuRvZvU2cxrWkJLcvGKoDnVDXesyqGtbDpG2FVpSNnUjUxBqGoG8wrdHrxmraYddvZdqSRnQEPJ0
+        47iWlCe88kfNbSXV8KIvpiXlQ9WNrN5mTsMalKCMtY1LINyyFMIt42lL2di1FpyVQXb9uUZnTQfs6LtM
+        S8pAsYvVU+5qWqYl5TFvG6s1uLzEBx/0dWlJedZrC/k2gzVIyc0rgkB0CEJNoxBqHstYyuaeDXP+EbYj
+        0AHb+rdqSVmjIeQdzcu1pLyhWj46urXUB8/741pSPuhpYPU2cxrWIKU6FIdg4xIINo1kTUrsKecvyGH3
+        miu0Bzph6+LLtaT0awh5qnmFlpRHfR2s1uCyUj98oKZbS8oH3BFWbzOnYQ1Ciko8UBsdgtrocNaldPvl
+        AxizTVugEy5dvE1LSn9x6t7+ZMtKLSmP+OVC2vxKwxqE+ELdUNswOCNSYttc7SVbamOweWC7lpQ+jcfv
+        W1pXaUl5vb+T1dr8WsAaGDmLCiFQvxgC9QMzJqXTVcvuOxdoDsZg4+AOLSl1hLypbbWWlNfWxFitza8F
+        rIFRWl4DNZH+GZWypn4xu28qSisC4A3GoL5zNbT2b4HYyB7oGtkLXaP7ID52BbQPbEtc21fXmwgt0Hod
+        moJdMDW0U0vKag0hj7dNaEl5TU0XqzXYWBaA9wX74cnaPng60AvPBnqk75T3lvN3SBoeMGJ2r7QMwufb
+        huHVjiXwamwUXuseg25H2YW64gUL4VAoCi/0jsDvj6+FryxfD3+wcgqeHBiFm9q6oKnUye6ly9bWVnhy
+        wxR8+eA0/PmNR+Evjt8Af3nzMfjQ3l1waLAfSvLyLnztLauWwY/uuQN+dN9d8OP7T8NPzt4Nf//wGfiH
+        R+6Ff3z3ffBPj90PP338QfjnJ87Cvzz1MLuXilBVJRzbug6eP3kdfPnR0wCvvpjEzz7xbKL9hduuh+m1
+        y8BZXMiukSGsgeH2NUNNXZ+WlIGGAShz14HLG00Iqisl/p3eVwQ+2lYFOqC1/1LoGNoOHUM7oHN4J3Qu
+        2QWxJbuZlPGx/dC99AB0j08n2vyRPliwcBG7rozGYBesG9qlJaXX4Wb1lBvb12hJeXUgzmoNNpQFEuEB
+        HSnPVHAhaXhAJWXccV6yaKEDPtM3Dm8MrYIvjUzAl8fWJEn51YmN8LXJzXCufxgcOfqvHwM+H7y+ew/8
+        4JrD8CfXXQt/euQ6+LOjR5Kk/KtbT8D3ThyFNm9VoubmlePwd++6XVtKek8Rm4Z64fUHTsHPP/kB+N9P
+        Pw//99kX4P9f+W0mpAiUM1SV+t9eE9bA8AW7wF/Xm1JK7K3MdThnaaWnTPUeWVLuh5beTdA2sBXaBy6H
+        9sFtlqXsGb8SOod3JSJ99PoG0YZB6I1NQl9sEsb7L4XJ4d1aUm5oWwmTTWOwrnEMGl3n51hdBaWwuWEJ
+        XFo/DFvrhxKJHh0p76gfSUiJPSV9fJ0qq72Q6Ekl5d2uevb90fCASsp4sRO8uXnwqfgofLF/Obw+sCKl
+        lC+NrdSScnG1D743fSX88cGr4PuHrtaW8ubl4/C3p2/TlpLe10zQ7YIvnLkF/vvDT8H/fOwZ+PnHn01L
+        SuT4til2/TRgDQxfuAf8SAopURha64/0a0tZqJg2cFaGEo+l2DO2Lb4sYyl7lh1M9OT0Pkg8vg7GR6+A
+        5SP7YOXIXphYskdbSuPxtcd3PmmD75U00aMrpfmd0vz51pcHk2J2KilPV/J5SBoeUEkZL3LCow1dicfX
+        L/SOa0uJPSW9rxlHbi58dedu+O7+aUtSfnjfLrhp2VL4mztPaktJ720QCwXgJ8+eg/986X3wXy8/kRUp
+        sbek97EIa0hi3rwFiRFWHSmLSs8/UpjBuUvdd8pip5fVI5jowZ6xpW9zVqXsGrtC2FPG4uthbGx/RlJ2
+        +88nbVBImuhJR0rz51tXEWTZV5mUd1VG2fdHwwMqKac9waR3SitS9rnkj3FHYt3wnd374I/27bcs5SOb
+        puCHt9+iLSW9NxIL1sCPnzgL//7Bx+A/Xnw8q1Jm2FOyhiQWYW41GNeSstzDexxvQki9gR5cJULrc3IL
+        Eome5t6NMyJlU88Gds+O+HoYWXogIynjvxQSB3pooicdKc2fb7IixLKvMinvdPOfKQ0PqKR8MdrDBnp0
+        pby7q4/d2+CVjVvgOzv3piXld4+9E/76tpu0paT3Li3Ih+8/dBp+9v5H4d+ee0/WpcSBnwzeKVlDEokg
+        ebBLS0psp/XeYJf26KtISHw3NWJ2MyUlrlox37O9ewqGlx7ISEpcJZL4/h1uluhJR0rz51tTEWLZV5mU
+        twuEFCV6VFLSgR5dKV9bsY7dG2l2lsObl++Eb2/fnbaU2FPqSknvf/vmtYnR13995pEZkzKDR1fWkAQ+
+        snprY9pSlpBfbhzo0Z0SwZFZcy32jjT7OhNShluXJd23tWcKBsenM5ISV4kkvn+HmyV60pHS/PkmXGGW
+        fZVJecrTlFSLyGJ2MyFlYwlf1bM32gx/eNmOiyYlvf8Pz525MCUyU1JiL5nmlAhrYHgDndpS+uv6IHdR
+        EbtGOuAiZxqzSyVlpG154jHUipSx0b1J923p3QCLl12ZkZS4SgSvVeVws0RPOlKaP99qV5hlX2VSnvTw
+        9ZCq7KtIyidCHbDG6YZJpweebohbknKDnwc+Hh0cgW9t3qYt5YtbNsONg4NwdmJ1WlKa7z3SWM/mKVNJ
+        +cXfvA2+/dgZy1JuGbU+t64lJPZcsyFloGGQJXpkUjb3bIT8wrcmprHWipQFphFevHbf8oMZSYmrRPBa
+        VSVuluhJR0rzz2WVq45lX2VS3lLFc8I0PKCS8oVABxTNX3ChFv9spae8OsL/Q3h6yTL45satWlJ+/LKt
+        SbXHhgYtS2muv239BJunVEnZVffWfyg3bpm0JOV73nmAfe8asAYGPobiZPzFljLSsZIlemRSuqqTH3dx
+        TtPK46ujrPpCLfawvcuvykhKXCWC1/KUeNiUSDpSmr+3lZV1LPsqk1K08wAND6ikvLY8wOrvqW3WlvLq
+        Ov7I/MWJDfCNqcu0pDzamzwwVLJoEbx5+JAlKc31J9etZvOUMilfPX2CffafvvS4tpSY6KH1GrAGxsKc
+        fKiqab/oUtJ5SpWUeabe8UJ9bI22lJ6AeP1hTaRPW0qXYNqHoivl9sgAqzVYURlh85QyKUU7D9DwgErK
+        1YJdEA5UBrTfKQ+F+aASTol8fd0WLSkxPEDrn5xab+md0lx7cu0qNk8pk/Lzdx1n98bHV913yu8+ow4l
+        SGANQiq9jRdVyoW5+WyeUiUlrUdw4Eh3oAc/P61HMNig21NWlIrnUc3o9pTbIoOs1mC5O8LmKWVSinYe
+        oOEBlZQxwb/dfleN9kAPZl9pvTFPqSPlYu9bTy4GNw4MWBroMdfeumYlm6eUSfnKHcfYvb9w762WBnpo
+        vQasQUh+YRl4/G0XTcr8onI2T6mSktYjOJqrO/qKG3DRegSzr7qPrxWSYIMZ3cdXjNnRWoNl7no2TymT
+        UrTzAA0PqKTszOX/bvsr/Nqjr1cFeVLIHB5IJWW/l/9Mb+hfbGn01Vx768QKNk+pkrK2MvkJwWrMjn52
+        DViDlHJ3+KJJiULSeUqVlLQewSkW3SkR3LSL1iP4uTFmpyNluYaQNNEjkxKzr7TWYNzdwOYpZVKKdh6g
+        4QGVlCIhryjzaU+JXBXgWVqa6FFJ2V/Ff6ZH+/otTYmYaw+PDrF5SpWUr5y6Ian+4emdCSmxp8THVwyk
+        v/7g7fDGQ3fCGw/fBV965DcS744G9LNrwBqkLMzJS6z8uBhS5heVsXlKlZS0HsF5T915Soz40XoEl24Z
+        2ddUUpZpCEkTPTIpMZBOaw2WehrYPKVMStHOAzQ8oJKyQySk06c9T3mwhq82oYkelZRCIXv7LM1TmmuH
+        I2E2T5lKyq/dc5L1lDMIa1CCUwsef+uMS4lCisIDMilpPRJqGWPzlDIpq0Pi9YcopDmQrpKyzMnfdyg0
+        0SOTclNULuSYJ8rmKWVSinYeoOEBlZQiIfeVVmuHBw76eZyShgdUUvZ7+EDZO3t6LYUHzLUl+XlsnlJH
+        yh+99wHY0Cf+HckyrCElxaXeGZcS31lliR6RlLQewXSQKDwgktIrEzLcw1aJyKR0aghJEz0yKTc0jrBa
+        gxFPlM1TyqSkS7cQGh5QSdkuErLEy8IDMimv9PGF4TQ8oJKy3y0QsruHhQdUUtL6164/lJaU+E55dt82
+        dr0swxq0KCnzZyzlPNOEMwWFVMXsqJS0Hgk1j0oTPVRKupbTAD8/zb7KpHSa5jJl0ESPTMqpxuQlV2aW
+        VDWyeUqZlKKdB2h4QCVl+6JiVr/XUSVM9IiknK7mQtLwgErKPreH1R/p6hYmemRS0vrt3V0sPGBFyq/f
+        dwqCM/cIyxq0yVRK/DqZlPhonCr7SqWkAz00PKCSUiYkjr7S7KtMylINIWmiRyYlLnKmtQbD3kZheEAk
+        pWjnARoeUEnZJhByT7GHJXpkUk57Q6yehgdUUvZVCoS0uHSL1iMfnd6XkZS4dGtjP//ZZgHWYIlMpayo
+        4sPiCAqpE0jPlpTeIH/XQnD0lcbsZFKWkmC9CJrokUmJOw/QWoMhb5M00UOlvEogJA0PqKQUCbm72MMS
+        PTIpcT0lrafhAZWUfZV8GdORzi6W6FFJSeuRGmcpfP/W4xlJieGBp6/bz66dIazBMplKmVdQwq6JyRvd
+        VSLZkLKqViZknMXsZFLSlS4iRDE7kZRrmpPXQJoZ9DYpY3ZmKQ/W8ukcGh5QSdm6yMHqrZxPecDNw+U0
+        PKCSUrTI+fqOGEv0qKSk9Qa4HQiN2aUj5Tfuvx1KCwvY9dOENaRFJlL6BFMOKGQ2drPTlRI/L/0MCI6+
+        0pidTEodIWXZVyrl6ubkNZBmBqqbU2ZfDSmngzyBRMMDKilb87iQVs6nxJgdrafhAZWUvRUCIdtjLNGj
+        kpLWmxkOB7PSU2ZRStaQNplIWVBUnnQtPFMyW1tM6kjpkQiJo680ZieTki50FqEKpJulXNWSvAbSTH91
+        M8u+yqQ8EOpl9TQ8oJKyRSCklfMpMWZH62l4QCVlbwXfWvO6tk6W6FFJSesp2FN+48Yjc0VK1pAR6UpJ
+        dwtAIekWkzMpZVEJ/58YwcEeGrOTSakjJA2ky6Rc0ZK8BtJMn6+FZV9lUl4hEJKGB1RSNguEtHI+Jcbs
+        aD0ND6ik7C0XCNnSwRI9KilpvQjc9zXTgR5DSnpti7CGjCmrDKUlpXnE9byQfN9XmZT0M2SLhJCC7KtI
+        Sh0haSBdJuXyVrmQvb4Wln2VSbkvxPe1oeEBlZTNefz93sr5lBizo/U0PKCSsqeMb0J2bXM7S/SopKT1
+        KqxuMSmS8qH9Gc1VsoaMmTdvPpS7I5alLCh6a5dsHOih+76qpKSfIVvg6CuN2cmk1BGSBtJlUo63yv+T
+        wS0mafZVJuWecD+rp+EBlZRNAiGtnE+JMTtaT8MDKilFQl7T1MYSPSopaX0qJlua4AenTmQk5VgbX3am
+        CWtIYsGCXCguqbqAo9QLDqcXSpzViUEMfEQtKa9JHDeAJ2QZdShlZXWTJSnN+7qikOYtJoMppKSfO1vg
+        6CuN2cmkNC9ylkED6TIpx9qSFyWbwS0mafZVJuWuOr6NBA0PqKRsyudCWjmfEmN2tJ6GB1RS9jj5BPw1
+        jW0s0aOSktbr0O6tyijRI1q6pQlrSAID5c6K2iTKXMHEY2l5ZRjK3XVQ4Y5Ahac+IaW5Nr/ACW5fi7aU
+        uJrEqM3LRyGT931VSUk/d7bAz0tjdjIpHRrRORpIl0k52r6K1RrgFpM0+yqTcmcdX+hMwwMqKRsFQlo5
+        nxJjdrSehgdUUoqEPBxtYYkelZS0Xhd8r3xuz/a0pcSNmOk1NWANSYiElEmJPSWtx4XNulJij2rUoZDG
+        PKWOlPS+CPa4Fd5oYk8gHDQ6T1PiPpW+5gvg+ZSyk5xx9JXG7GRS6ghJA+kyKZd0rGa1BrjFJM2+yqQU
+        7TxAwwMqKaP5fNe4S0v9LNEjkxJjdrSehgdUUnaXJo++I4cbmlmiRyUlrbfKmfVr0pLy7N7L2bU0YA1J
+        yIQUSYmPr7S+uLQK3NXNWlKivEbdonxHUngglZT0vgguLtYdfZUdGotbe9CYnUxK2c7rZmggXSblsEJI
+        3GKSZl9lUop2HqDhAZWUIiG3OGtYokcmJcbsaD0ND6ik7C7hQuLGWTTRo5LSXNviciUO+Bnw+89TUwOD
+        ASQAg7XnGQrWwlCoNpHmMeqsHvCDUn7uNp6j1YA1JKESkkopmhjHnc+xR9KR0kWEpIkelZT0vgjW606J
+        YE9J6xFPTTuL2cmk1BGSBtJlUg52TLBaA9xikmZfZVKKdh6g4QGVlA0CITc7a1iiRyYlxuxoPQ0PqKTs
+        LnlroM/geLSNJXpUUpprX1g3xeYpafbVWCVyYmny71U6j6/0s2vAGpJIJaRZShzoofW42TH2fDpSmjdK
+        TggpiNnJpKT3RXAto+48pVzINhazk0mpIyQNpMukHOiUH8+HW0zS7KtMStHOAzQ8oJKyIZ9vHmblfEqM
+        2dF6Gh5QSbndy6N3740PsESPSkpz7fOT69g8pUzKE2PJv1fYY1qdEsFjC+jnTwFrSEJHSENKHH2l9Tja
+        6qqKaklpDpovWJjL5ilVUtL7IlivGx6QCelOCMmzryIpdYSkgXSZlHgUHq01wC0mafZVJqVo5wEaHlBJ
+        WV/AhbRyPiXG7Gg9DQ+opDwVTv53wUNjPze0giV6VFKa65+bmGTzlDIpj4/wn53V8MBos3jxhALWkMQ7
+        3jGPyScDp0RoPeKqatCSEkdqzXV0nlIlJb0ngis1dBM95gElM25/K4vZyaQsdvLegEID6TIp8XxKWmvQ
+        Fuhk2VeZlKKdB2h4QCWlSEgr51NizI7WP1ARsSRlQ8FbK07uaGhn4YFUUprv/dzqSTZPKZPy+BL+e2X1
+        KLzRpiwLiVDxZOA8Ja19x7z5CdF0pMQjys21dJ5SJSW9b6LewlF45p3LzeBgD43ZyaTEASxaT6GBdJmU
+        3ZJF10hLbYxlX2VSinYeoOEBlZQRgZBWzqfEmB2tv9NZyxI9qaR8d2McXo4NsXlKHSnN9/7Aygk2TymT
+        8tgw/726aXyM7fuqkhKPLqDXSAFrYFDxZNB5SAT3VzXmKVNJSX+h8TFWV0qM2tF7WzkKr6CYz3chKKQo
+        +yqSUnQ+JoUG0mVS4qGxtNagORhj2VeZlKKdB2h4QCVlpIAPqlg5nxJjdrR+U6GLJXp0pKRTIrpSmu/9
+        /uWr2TylTEo8toB+dhzoofu+qqTsCPCBzhSwBgb2fFQ+GTh/aK4tcriTwgMqKWktvlPS8IBMSpFQ/nAv
+        S/TIpJy/YCGrR/DdUhZIp1LqCEkD6TIp8dBYWmvQFOxi2VeZlKKdB2h4QCVlXSEX0sr5lBizo/V1C/NZ
+        omcmpTTf+9Z4L5unlEmJO6TTz3561Qq276tKSlqvAWtg4FHjVDwV+PWY0sF3ShoeUEmJRxaY74vzmjQ8
+        IJOS7jyAg1E0PCCTMqRYDIxCqlaJmKUsqeBPCBQaSJdJGe9L/kUy0xjsYtlXmZSinQdoeEAlpUhIK+dT
+        YsyO1iNPVTZdNCnN97VyFN63Dl6ZOEvEXP+Vqw+yfV9lUr55Z/IWlJqwBgb2XFQ6XWh4QCalORRggGsk
+        aXhAJWVZZTjx6Iq9JS56puEBmZSyXcuR80Kql24ZUuLnovUUGkhXSYkjzbQeiYbiLPsqk1K08wAND6ik
+        DAuEtHI+JcbsaD2yoqCcxex0pXymqdeSlOb7NpWWsXlKlZSf3LEdVtdHEuGBpzZtYFtMqqR8bGfy47Im
+        rIExb/5CJpoVdKQUBbNxyoSGB1JJSUdfdaR0mELtFPzPQmc9JX18le3RQwPpqaQ03inN12gIdbPsq0xK
+        0c4DNDygkjJUyJMyVs6nxJgdrTc4UxGxLOXvNPYlNs56zUJPSe/7xrrNlqSko6+6Uq5tF6e/UsAahFh5
+        jxSRSsqcXPFps2Wu0IxKGWpZCvPni98fkXQOjVXt0UMD6bpSmq8RCXWz7KtMStHOAzQ8oJJSJKSV8ykx
+        ZkfrDdwLcuH5qjZLUo44KhIbZ2FPqSslve/NHXEWHsi2lN+8WbzbnQasQQgmbqhkVpFJiX+n9zPADZVp
+        oiebUuJgEr2nGQyk05idjpT4eem1EBpI15XSfI26cA/LvsqkFO08QMMDKimDZGsVxMr5lBizo/VmUEqd
+        nvIj4TisKT2/qwNunGU8vqaS8mND/PuvLihk4YFsS7mjh++HqwlrkJJpLymTEmWn9zLjdAVnREr8s6p3
+        THzPpVUsZqcjpWyPnsbu9WlJab5GONzDsq8yKUU7D9DwgErKoOB8SCvnU2LMjtaLGMgrhRtKA/B0ZWOS
+        lA96GhKHxlaZ3qfPBVuT3ilVUmLMjt4LsbrI2YqUH9m/h93PAqxBCr5L4lwjlcwqZinNi5pl4LskjsJm
+        W0rZkiszOB1CY3Y6UsoOgMUVKHSViI6U5muE6npY9lUmpWjnARoeUElZKxDSyvmUGLOj9Zny0foeNtAj
+        k/LxmFhI5Fz/cNalfOXggcQ6SnovC7AGJbiDAE5HUMmsIsu+ysApkWxKqZM7NfDWdlqWEleJ0OsguXlF
+        bJWIjpTmawTremFk6f4kKVdJpBTtPEDDAyopRUJaOZ8SY3a03qBw3gII5aifjigTDhcb6FFJKTqf0qA4
+        JyerUr68czuU5CVPk6QBa0gJ5lutzk1ScJ6SXjcV2FNm+viK+6yKUj0q8LE20r7CkpS4SoRex8DKxlmG
+        lOb62rreX46+ppZStPMADQ+opAwIhLRyPiXG7Gi9gbHzwDXlIahcIJ7iMRPJLYAPBWJsoEcl5Vh56iew
+        PZEovD65KW0p3zx8SBizSxPWoA0+wuJcoW6PiY+7KDLW0WtZAQd6MPeKcTsdKfHPOH1B9361AkYAdXvK
+        aGwNOCv5mRZmyj2RhLg6UuK1zbWBSJ9pSkQtpWjnARoeUEkZEGR8rZxPiTE7Wo+4Fi5iMbv73c2J7Cse
+        8FM4b/6Fr/XMz0nsPPC7vjbp6KtMSlwdQu8twpGTAxtrw/DM6HJtKT9x+TaYjnex8ECGsIa0wF4T0zH4
+        SIa9nxkctMFHXVqTDVCU3LzixPYZ58GNt85vvoVrKnMWiadT0gXfKTF4QLcDcbpqE++k8xfksBoVeFJ0
+        eVV9oufGMDyuUMGgAn4vojjgrwo3e1tYzI4u3aLbgYhGX1VS3lcvHljTAU/dWuEPJI4twLNE8IAfPHVr
+        S7QRFlf7wJE7M7/PWRPSxkaXrsJyluiZCSnjxdZfi+YArMHGZka5O9DDEj3ZlvLRuvR7x1mGNdjYzBhW
+        lm6lK+XHor1QlZPV97qLCWuwsZkxFjuq4N7wwIxJiYme+rzsjhtcZFiDjc2M4l9UBEf8HVmX8qy3MSnR
+        8zaFNdjYXBQ6iyrgqK8jYylxj57VghD82xTWYGNzUSlfmAdDDg9sqwjDCW+rckrkt6pa4W5XPRws8cHK
+        gnLwWJxmehvAGmxsbGYP1mBjYzN7sAYbG5vZgzXY2NjMHqzBxsZm9mANNjY2swdrsLGxmT1Yg42NzezB
+        GmxsbGYP1mBjYzN7sAYbG5vZgzXY2NjMEr8AUoDMLJvAPyMAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIAAdKAAAZgAAAICAAAABACAAKAgBAIMoAABAQAAAAQAgAChCAACrMAEAMDAAAAEA
