more work on the editor

--- a/ImageEditorForm.resx
+++ b/ImageEditorForm.resx
@@ -213,9 +213,156 @@
         ZZVpkUJWWWVapJBVVpkWKWSVVaZFCllllWmRQlZZZVqkkFVWGdX/A843cvEtmq8MAAAAAElFTkSuQmCC
 </value>
   </data>
-  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="EditorMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="EditorToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>133, 17</value>
+  </metadata>
+  <data name="toolStripSplitButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAACA9SURBVHhe7d1BriTFuQVgb8aCCUPEJpiwHbwCtsNqGGK2
+        wMAM6O6n9FPp5Ts3IjMy6lZU9f2/TzpyZ0RUlhWD+59u4+YfXwCAcv6RCwDAx6cAAEBBCgAAFKQAUN7f
+        f//93/C+bvfqbuE1KQCUZ0g9hgIAr00BAICCFAAAKEgBYErvj3dH1kfO9NZHzoys7/X28/taZ27yXOvs
+        fj3Pts5v8kyeu7Ke72mdSXkuz+be/kw+n30u3dY/ffp0enbTOtc7m2d653rys73P55ne2dxvnc311nvg
+        CgWAaa0fQr0fTrk+cqa3PnLmbH2vtb//XGb03D1nz863zo2u9ZJyv3U21/f7+Xz2mSvnHnV2RH6m9/nc
+        y1w5exSYpQAwrfUDqPeDKdfyeb/WW+8979d660fyzNm7Xv1sPue51DrfWmut5/PR2d5ab721tl8/W2ut
+        n70z11PvXGs9n3O9dTbP99b3ezBLAWBa/gDa/7Dq7Z09P/qzLXkmn/f2e63v28u9fM71kbOb1t7+Ha39
+        /ZnU+kw+7+33Wp/NczPvbT3n+sx/h965zdHezdGZ1ve0zrb28jnXj/ZglgLAtPzhdPbr/Q+rXDv79Xt9
+        tiXP5HPP2ftzL59zvXX2KOlob3NlL7+rlTyXWnv5jlbybMqz+Xwkv6uVIyNnNmfvy718zvWjPZilAHCX
+        /Q+hkV/v9c70fr3XO9P79ZE8l889t3O9s7mXz7neOnuUdLS3ubKX39VKnkutvXxHK3k25dl8PpLf1cqR
+        kTObs3O5n8+5frQHsxQA7nL7IbT/J7D36yM/wFZ/NuW5fO45+47cy+dcHznb8/nz5+Z79q7s5XPP0Xe2
+        9vL5SO9svjefj4ye6xn9/Nl/p9zL51w/2oNZCgB32f+Ayh9GR3tn+0d7Z/tHey15Lp/39ntn35F7+Zzr
+        rbNbwRmxf0e+K8+k1mfyuaf12aO9fD7SO5vvzeeRs6P3mnrfs2l9T+tsay+fc/1oD2YpANzl6Hee+/Xc
+        2zzrsynP9T7bWs/nXL/37NH5fL6t5XOeS63zrbX93m2Anp3Lvdbafm8/mI/O5V4+99Zbn829I73Pt9bz
+        Oddnz+YezFIAuFvvh1Rvfa93pre+1zszu95aa2X0XO9sOjvfS55rfba11kvK/UyeSb29fE8mz6Wjs730
+        Pt9Knkt5vvXZs3O9s6l3fr8HsxQA7nb0g+hob3O0f7S3Odpv7d3Weutpf7535ibPtc6erZ/ttc5cWc/3
+        tM6kPJdne+tX9s7OpN5n3vtvAuytb/KzV861zp6tH+3BLAUAijAwgD0FAIpQAIA9BQCKUACAPQUAilAA
+        gD0FAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAK
+        UgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAF
+        AAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAA
+        oCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAK
+        UgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAF
+        AAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAA
+        oCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAK
+        UgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAKUgAAoCAFAAAK+moKwJ9/
+        /vnl119//fLzzz9/+emnn758//33X7755psv//znP0VERJZnm0HbLNpm0jabthm1zaqvxcsXgN9///2/
+        F/vdd9+9uXwREZFXyjartpm1za5X97IF4K+//vryyy+/fPn222/fXLCIiMgrZ5td2wzbZtmreskC8Mcf
+        f3z58ccf31yoiIjI15Rtlm0z7RW9XAH47bffvvzwww9vLlFERORrzDbTttn2al6qAGwtyfAXEZGPlm22
+        vdqfBLxMAdj+dxJ/7C8iIh8124z7z3/+k+PvaV6mAGz/sEReloiIyEfKNutexUsUgO3/LuGf9hcRkY+e
+        bda9yv9F8CUKwM//+vnNJYmIiHzEbH9PwCt4egHY/tYkf8mPiIhUyTbzXuFvDHx6Adj+6sS8HBERkY+c
+        bfY929MLwPZHIXkxIiIiHzmv8D8DPL0AbP8ShbwYERGRj5xt9j3b0wvA9m9SyosRERH5yNlm3yP9/fff
+        ufTGUAHYXjSSGf6VviIiUi3b7HtPOY9HZvJpAcgXHmVGXoqIiEiF3OPz589vZnDmzHABeJS8EBERkQqZ
+        kUP+ysBPCoCIiMgTMiOH/qdPn/LIMAVARETkCZmVJWD2TwEUABERkSfkPWQBuFIGTgvAJl/ay4y8EBER
+        kQp5b1dnsgIgIiLyhLyHnMNXZvJpAcgXHmVGXoiIiEiFzMrZOzuHhwvAo+SFiIiIVMiMHPj3zGcFQERE
+        5AmZkcP/niKgAIiIiDwh98jh38qZ4QIw8rIZeSEiIiIV8p5y+I/M7EsF4Cwz8kJEREQq5FFGZ7ICICIi
+        8oQ80shMPi0Aj5YXIiIiUiHvKX9DrgCIiIi8aO6x5F8HfJMvvvIlR/JCVgeAmnIerM6MnL/3zOKhApBf
+        0sqsvJDVAaCmnAerMyNn75J/HXBr0B/tjcoLWR0Aasp5sDqzcvbOzuHhAnBk5ExPXsjqAFBTzoPVeQ9Z
+        AK6UAQUAgJJyHqzOe1MALgaAmnIerM57yKGvAFwIADXlPFidWTnorwz9veECkF+Qa1e/+CYvZHUAqCnn
+        werMyLk7O3s3pwVgk1/Wyqy8kNUBoKacB6szI2fvPXN4qADc5JfNfGHKC1kdAGrKebA698hZ3MqZSwXg
+        EfJCVgeAmnIerM57yuH/rgWg9cLW2lV5IasDQE05D1bnUUZn81AB6DWK3voVeSGrA0BNOQ9W55FG5vJp
+        ATgb8mf7Z/JCVgeAmnIerM572s/i0Zk8XACOjJzpyQtZHQBqynmwOvdY8q8DHnnRyJmevJDVAaCmnAer
+        MyOH/JWBnxQAAErKebA6M3LoL/vXAbec7Z/JC1kdAGrKebA6s7IEzM7h0wKwyS9oZVZeyOoAUFPOg9V5
+        DzmLr8zloQKwyRdf+ZIjeSGrA0BNOQ9W571dnc3DBeBR8kJWB4Cach6sznvIoa8AXAgANeU8WJ1ZOeiv
+        DP09BQCAknIerM6MHPhXh/7euxSAe/5L5IWsDgA15TxYnRk5/O8pAgoAACXlPFide+Twb+XMuxSAe+SF
+        rA4ANeU8WJ33lMNfARgIADXlPFidR3n3AtBrFvl8VV7I6gBQU86D1Zlx78zdGyoAOfwVAAC+djkPVmfG
+        vTN377QA5NBvfXlrbVReyOoAUFPOg9WZcc+8TcMFoPfcWxuVF7I6ANSU82B1nk0BAKCknAer82wKAAAl
+        5TxYnWcbLgC3Ab//9adPn97sX5UXsjoA1JTzYHVm7GfuWfIz6bQAbPKlrczKC1kdAGrKebA6M3L2HiU/
+        k4YKwCZf3PqSGXkhqwNATTkPVufZhgvAo+SFrA4ANeU8WJ1nu1QA8nf7+TwjL2R1AKgp58Hq3CP/JH7m
+        T+WHCkDvxb31K/JCVgeAmnIerM6sHPitjDgtAEcvPdoblReyOgDUlPNgdWaczdyz/b3hAnBk5ExPXsjq
+        AFBTzoPVmTEyb0fObBQAAErKebA6M0bm7ciZjQIAQEk5D1Znxsi8HTmzUQAAKCnnwerMuM3b3sw92987
+        LQD51/32sp2bkReyOgDUlPNgdWb1hnxvvee0AGxy2LcyKy9kdQCoKefB6tyjNXtba0eGCsBNDv0rX9ST
+        F7I6ANSU82B1nu1SAXiEvJDVAaCmnAerc6/8DfnV35RfKgD5RZkZeSGrA0BNOQ9WZ1bO3lZGDBWAfHEv
+        M/JCVgeAmnIerM6snL2tjDgtAPnSo8zIC1kdAGrKebA6M87m7ZWZPFwAHiUvZHUAqCnnwerMGJnJI2c2
+        CgAAJeU8WJ0ZIzN55MxGAQCgpJwHqzNjZCaPnNmcFoD93wT4CHkhqwNATTkPVmfGbR73ZvLZ/t5pAdi/
+        7Cwz8kJWB4Cach6szqycva2MUAAAKCnnwercI+fvzCw+LQCPlheyOgDUlPNgdZ5NAQCgpJwHq/NswwWg
+        90cMt39IcFZeyOoAUFPOg9WZkbP4KGeGCkC+dP/ifL4qL2R1AKgp58HqzMhZfJQzpwUgX9Z6cWttVF7I
+        6gBQU86D1XmEK/N4uAD0nntro/JCVgeAmnIerM6jjM5kBQCAknIerM6jjM5kBQCAknIerM6jjM7k4QJw
+        e1m+OPevygtZHQBqynmwOjP2M/csZ04LwCZf2sqsvJDVAaCmnAerMyNn71HODBWATb74ypccyQtZHQBq
+        ynmwOjNy/rYyargAPEpeyOoAUFPOg9V5NgUAgJJyHqzOs70pAPlHCPlHC0eZkReyOgDUlPNgde6R83dm
+        FisAAJSU82B1ZuXsbWWEAgBASTkPVmfGfuZu/zK+/Vrun3lTAFbLC1kdAGrKebA6M1rDPdfyuee0AIy+
+        aFZeyOoAUFPOg9WZ0ZrJuZbPPQoAACXlPFidGa2ZnGv53KMAAFBSzoPVmdGayfu126/zTMtwARjJjLyQ
+        1QGgppwHqzMrZ27O4tF5rAAAUFLOg9WZlTN3dhYrAACUlPNgdZ7ttAA8Wl7I6gBQU86D1Zkx+pvtkXPD
+        BaD3u/3tLyIY+aKevJDVAaCmnAerM6M1h/fO9veGCkAO//2L8/mqvJDVAaCmnAerMyNn8efPn7t7Z04L
+        QL6s9eLW2qi8kNUBoKacB6tzjxz2OatHDBeA3nNvbVReyOoAUFPOg9W5Vw7+q3NYAQCgpJwHq3OPHPwz
+        JUABgGI+N+QZqCDnwerMOBr2R3stwwXg9rJ8ce5flReyOlBJb9j31uEjy3mwOjPOZu7Z/t5pAdjsX9jL
+        rLyQ1YFKboM+f/evAFBRzoPVmTE6b0fODRWATQ789xj+m7yQ1YFKegM/n6GCnAer82zDBeBR8kJWByrx
+        JwDwf3IerM6zKQBQSG/Q99bhI8t5sDoj8k/cr+TMcAHIF1/5kiN5IasD1ex/93+TZ6CCnAerMyLn7ZWc
+        GSoA+dJWZuWFrA4ANeU8WJ0ZIzN35MzmtAAcDfqjvVF5IasDH8ntd/P739Xv1/a/498/t9by+bYGH0XO
+        g9WZMTJvR85shgvAkZEzPXkhqwMfSQ7uXGudbZ3J/4SPKOfB6swYmbcjZzYKAHwgWQBu9nt5tvW5/fre
+        bR0+gpwHqzNjZN6OnNkoAPCB3Ib0/j9zLc/m+dzLM/BR5DxYnRm3eduau0d7LQoAfCCtAZ5loPW8X8v/
+        zDPwUeQ8WJ1ZOehbGTFcAGYyIi9kdQCoKefB6twj5+3V2btRAOCDuvK799zPZ/iIch6szrOdFoBHywtZ
+        HfiorgzxPJvP8BHlPFidZ1MA4IO6DfH9nwDcfr2X661n+IhyHqzOPfJP3K/+6fvmtACMvmz0XMoLWR34
+        qPbDez/YZ/4TPqKcB6szKwd+KyOGCsDRC8/2z+SFrA58VP/3e/j/dVvr/efROfiIch6szozWzN0/t/Z7
+        LhWAfOHR3qi8kNUBoKacB6szozVvcy2fe04LwE0O+3sH/01eyOoAUFPOg9WZ0Zq7uZbPPcMFYJODf+QL
+        zuSFrA4ANeU8WJ0Zrdmba/ncM1wAcvC/VwnIC1kdAGrKebA6M1pzd792ZTafFoDesN/+2aDe3hV5IasD
+        QE05D1ZnVs7cnMWj8/hSAWg52z+TF7I6ANSU82B1Zm3z9tOnT//veWYWDxWAEaPnUl7I6gBQU86D1Xm2
+        0wLwaHkhqwNATTkPVmdG/m7/KGeGC0Dvxfl8VV7I6gBQU86D1ZmRs/goZ4YKQL50/+J8viovZHUAqCnn
+        werMyFl8lDOnBSBf1npxa21UXsjqAFBTzoPVeZTRmTxcAHrPvbVReSGrA0BNOQ9W51FGZ7ICAEBJOQ9W
+        51FGZ7ICAEBJOQ9W59mGC8BtwO9/vf1FBLl/VV7I6gBQU86D1Zmxn7lnyc+k0wKwyZe2MisvZHUAqCnn
+        werMyNl7lPxMGioAm3xx60tm5IWsDgA15TxYnRk5f4+Sn0nDBeBR8kJWB4Cach6szrMpAACUlPNgdZ5t
+        uADkHy20MiMvZHUAqCnnwercI+fvzCw+LQD54qPMyAtZHQBqynmwOrNy9rYyQgEAoKScB6szozVz98+t
+        /Z7hAvAoeSGrA0BNOQ9WZ0ZrJudaPvcoAACUlPNgdWa0ZnKu5XOPAgBASTkPVmdGaybnWj73nBaAzejL
+        ZuSFrA4ANeU8WJ0ZrXm8X7v9Os+0nBaA/cvOMiMvZHUAqCnnwerMypmbs3h0HisAAJSU82B1Zm3zdvuX
+        8e2fZ2bxaQF4tLyQ1QGgppwHq/NsCgAAJeU8WJ1nGy4A+UcMM3/c0JIXsjoA1JTzYHVm5Pw9ypmhApAv
+        bWVWXsjqAFBTzoPVmZGz9yhnTgvA2cvO9s/khawOADXlPFidR7jN4/0/JNgzXACOjJzpyQtZHQBqynmw
+        Oo8yOpMVAABKynmwOo8yOpMVAABKynmwOo8yOpOHC8DRy872j+SFrA4ANeU8WJ0Z+5l8ljOnBWCTL21l
+        Vl7I6gBQU86D1ZmRs7eXEQoAACXlPFidGTl7M1cMFYCb/KKrX9aSF7I6ANSU82B1nu1SAXiEvJDVAaCm
+        nAerc6/8DfnV35QPF4DWy1trV+WFrA4ANeU8WJ1ZOfRbGTFUAHov7a1fkReyOgDUlPNgdWZsf8NfDvtW
+        3vVvAuwN+bP9M3khqwNATTkPVmfGyLwdObMZLgBHRs705IWsDgA15TxYnRkj83bkzEYBAKCknAerM2Nk
+        3o6c2SgAAJSU82B1ZozM25Ezm+EC0HvZ2f6ZvJDVAaCmnAerM2M/c3PuHu21nBaATb60lVl5IasDQE05
+        D1ZnVm/29tZ7hgrAJgf+1S/qyQtZHQBqynmwOvfK+ZvPZ4YLwKPkhawOADXlPFidZ1MAACgp58Hq3CP/
+        JH7mT+XfFIB8Qb74KDPyQlYHgJpyHqzOrJy9rYxQAAAoKefB6szYz9zbX/e7n8FXZvKbArBaXsjqAFBT
+        zoPVmdEa7rmWzz0KAAAl5TxYnRmt4Z5r+dyjAABQUs6D1ZnRGu65ls8971IARr+sJS9kdQCoKefB6sxo
+        zdv92u3XeaZFAQCgpJwHqzMrZ+5+6OfeEQUAgJJyHqzOrJy5M8N/c1oArr7wqryQ1QGgppwHq/NswwVg
+        pl2MyAtZHQBqynmwOs82VQAy98gLWR0Aasp5sDoz3mPu3pwWgJTD/94ikBeyOgDUlPNgdWbcM2/T5QJw
+        k8N/9r9QXsjqAFBTzoPVebZLBSAH/r3Df5MXsjoA1JTzYHWe7bQA5KB/j6G/lxeyOgDUlPNgdZ7tcgF4
+        b3khqwNATTkPVuceOZtn5vTlAjDzJUfyQlYHgJpyHqzOrJzFrYw4LQB7+QVXv6wlL2R1AKgp58HqzDib
+        u2f7e5cKwN6nT5/epQTkhawOADXlPFidGSPzduTM5nIByKGvAADwNcp5sDozRubtyJnNaQHIIZ/5/Plz
+        fuSSvJDVAaCmnAerM2NkuI+c2UwVgPeUF7I6ANSU82B1ZpzN4rP9vaEC8Eh5IasDQE05D1ZnVm/I99Z7
+        hgrA6Mtm5IWsDgA15TxYnXu0ZnNr7chwAbjaLEblhawOADXlPFidZ5sqAJl75IWsDgA15TxYnXvlLL46
+        j08LQMovm/3im7yQ1QGgppwHqzMrZ28rIy4XgJv8stEvTHkhqwNATTkPVmdGzt3b7M21kZl8qQDky698
+        UU9eyOoAUFPOg9WZMTJzR85sTgtADvr3GPp7eSGrA0BNOQ9WZ8bI/B05s7lcAN5bXsjqAFBTzoPVmTEy
+        i0fObC4XgPcuA3khqwNATTkPVmfGyPwdObM5LQB7WQDeowzkhawOADXlPFidGUez92iv5VIB2POvAwbg
+        a5bzYHVm5extZcTlApBfcvULU17I6gBQU86D1blHzt+ZWXxaAPLFma/9XwcsIiLyjDzbVAF4T3khIiIi
+        FfJsQwXgkfJCREREKmRG/ob8KGeGCsDIi2blhYiIiFTIjBzyRzkzXACuvPSKvBAREZEKeYQrs3qqAGTu
+        kRciIiJSIY8yOptPC0DK4X9vEcgLERERqZBHGZ3JlwvATQ7/kS9ryQsRERGpkEcZncmXCkAO/HuH/yYv
+        REREpEJm5Ow9ypnTApAvvPLyEXkhIiIiFTIj53AvIy4XgPeWFyIiIlIhM3Im9zLicgG4+gVn8kJEREQq
+        5FFGZ/RpAdjLAvAeZSAvREREpEIeZXQuXyoAex/lXwcsIiLyjDzK6Ey+XABy6CsAIiIi1/MoozP5tADk
+        kM/41wGLiIhcz4ycwUc5M1UA3tM333zz5lJEREQ+crbZNyPncS8jhgrAI33//fdvLkZEROQjZ5t9z3Za
+        AB7tp59+enMxIiIiHznb7Hu2pxeAn3/++c3FiIiIfORss+/Znl4Afv311zcXIyIi8pGzzb5ne3oB+PPP
+        P7989913by5HRETkI2abedvse7anF4DNz//yPwOIiEiNvMIf/29eogD8/vvvX7799ts3lyQiIvKRss26
+        bea9gpcoAJtffvnlzUWJiIh8pGyz7lW8TAH466+/vvz4449vLktEROQjZJtx26x7FS9TADZ//PHHlx9+
+        +OHNpYmIiHzN2WbbNuNeyUsVgM1vv/2mBIiIyIfJNtO22fZqXq4AbLaW5H8OEBGRrz3bLHu13/nfvGQB
+        2Gz/O8n2D0v4fweIiMjXlm12bTPslf43//SyBeDm3//+93//P5P+siAREXn1bLNqm1nb7Hp1L18Abra/
+        NWn7qxO3i93+JQrbv0nJv0pYRESelW0GbbNom0nbbNpm1Cv8DX+jvpoCAAC8HwUAAApSAACgIAUAAApS
+        AACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUA
+        AApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACg
+        IAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApS
+        AACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUA
+        AApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACg
+        IAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApS
+        AACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUA
+        AApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSAACgIAUAAApSACjv77///m94X7d7dbfwmhQAyjOk
+        HkMBgNemAABAQQoAABSkADCl98e7I+sjZ3rrI2dG1vd6+/l9rTM3ea51dr+eZ1vnN3kmz11Zz/e0zqQ8
+        l2dzb38mn88+l27rnz59Oj27aZ3rnc0zvXM9+dne5/NM72zut87meus9cIUCwLTWD6HeD6dcHznTWx85
+        c7a+19rffy4zeu6es2fnW+dG13pJud86m+v7/Xw++8yVc486OyI/0/t87mWunD0KzFIAmNb6AdT7wZRr
+        +bxf6633nvdrvfUjeebsXa9+Np/zXGqdb6211vP56GxvrbfeWtuvn6211s/emeupd661ns+53jqb53vr
+        +z2YpQAwLX8A7X9Y9fbOnh/92ZY8k897+73W9+3lXj7n+sjZTWtv/47W/v5Man0mn/f2e63P5rmZ97ae
+        c33mv0Pv3OZo7+boTOt7Wmdbe/mc60d7MEsBYFr+cDr79f6HVa6d/fq9PtuSZ/K55+z9uZfPud46e5R0
+        tLe5spff1UqeS629fEcreTbl2Xw+kt/VypGRM5uz9+VePuf60R7MUgC4y/6H0Miv93pner/e653p/fpI
+        nsvnntu53tncy+dcb509Sjra21zZy+9qJc+l1l6+o5U8m/JsPh/J72rlyMiZzdm53M/nXD/ag1kKAHe5
+        /RDa/xPY+/WRH2CrP5vyXD73nH1H7uVzro+c7fn8+XPzPXtX9vK55+g7W3v5fKR3Nt+bz0dGz/WMfv7s
+        v1Pu5XOuH+3BLAWAu+x/QOUPo6O9s/2jvbP9o72WPJfPe/u9s+/IvXzO9dbZreCM2L8j35VnUusz+dzT
+        +uzRXj4f6Z3N9+bzyNnRe02979m0vqd1trWXz7l+tAezFADucvQ7z/167m2e9dmU53qfba3nc67fe/bo
+        fD7f1vI5z6XW+dbafu82QM/O5V5rbb+3H8xH53Ivn3vrrc/m3pHe51vr+Zzrs2dzD2YpANyt90Oqt77X
+        O9Nb3+udmV1vrbUyeq53Np2d7yXPtT7bWusl5X4mz6TeXr4nk+fS0dleep9vJc+lPN/67Nm53tnUO7/f
+        g1kKAHc7+kF0tLc52j/a2xztt/Zua731tD/fO3OT51pnz9bP9lpnrqzne1pnUp7Ls731K3tnZ1LvM+/9
+        NwH21jf52SvnWmfP1o/2YJYCAEUYGMCeAgBFKADAngIARSgAwJ4CAEUoAMCeAgAABSkAAFCQAgAABf0P
+        1RuZ6RsEsbYAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIAAdKAAAZgAAAICAAAABACAAKAgBAIMoAABAQAAAAQAgAChCAACrMAEAMDAAAAEA
